--- a/FortnoxAPILibrary.Tests/FortnoxAPILibrary.Tests.csproj
+++ b/FortnoxAPILibrary.Tests/FortnoxAPILibrary.Tests.csproj
@@ -56,6 +56,7 @@
     <Compile Include="Connectors\ConnectorTestsBase.cs" />
     <Compile Include="Connectors\EmployeeConnectorTests.cs" />
     <Compile Include="Connectors\SalaryTransactionsConnectorTests.cs" />
+    <Compile Include="Connectors\SieConnectorTests.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Testv300.cs" />
   </ItemGroup>
